--- a/index.HTML
+++ b/index.HTML
@@ -77,11 +77,11 @@
             <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a class="active" href="about.HTML">about</a> </li>
-            <li><a href="gallery.HTML">gallery</a></li>
-            <li><a href="video.HTML">video</a> </li>
-            <li><a href="contact.HTML">contact</a> </li>
-            <li><a href="https://fuzzyntricky.page.link/tobR">suscribe</a> </li>
+            <li><a class="active" href="about.HTML"  target="_blank" >about</a> </li>
+            <li><a href="gallery.HTML"   target="_blank" >gallery</a></li>
+            <li><a href="video.HTML"   target="_blank" >video</a> </li>
+            <li><a href="contact.HTML"  target="_blank"  >contact</a> </li>
+            <li><a href="https://fuzzyntricky.page.link/tobR"  target="_blank"  >suscribe</a> </li>
         </ul>
 
     </nav>
@@ -96,10 +96,10 @@
         <div class="inner">
             <div class="social">
                 <ul>
-                    <li><a href="https://m.facebook.com/Fuzzyntricky-104255691713465/"><i><i class="fa-brands fa-facebook"></i></i></a></li>
-                    <li><a href="https://instagram.com/fuzzy_n_tricky"><i><i class="fa-brands fa-instagram"></i></i></a></li>
-                    <li><a href="https://telegram.me/FuzzynTricky"><i><i class="fa-brands fa-telegram"></i></i></a></li>
-                    <li><a href="https://www.youtube.com/c/FuzzynTricky"><i><i class="fa-brands fa-youtube"></i></i></a></li>
+                    <li><a href="https://m.facebook.com/Fuzzyntricky-104255691713465/" target="_blank"  ><i><i class="fa-brands fa-facebook"></i></i></a></li>
+                    <li><a href="https://instagram.com/fuzzy_n_tricky"  target="_blank"  ><i><i class="fa-brands fa-instagram"></i></i></a></li>
+                    <li><a href="https://telegram.me/FuzzynTricky"  target="_blank"  ><i><i class="fa-brands fa-telegram"></i></i></a></li>
+                    <li><a href="https://www.youtube.com/c/FuzzynTricky"  target="_blank"   ><i><i class="fa-brands fa-youtube"></i></i></a></li>
 
                 </ul>
             </div>
