--- a/contact.HTML
+++ b/contact.HTML
@@ -14,10 +14,10 @@
     <section class="contra" align="center">
         <ul>
            <h1>Gmail:  sandeepmahawar60@gmail.com</h1>
-        <li><a href="https://m.facebook.com/Fuzzyntricky-104255691713465/"><i><i class="fa-brands fa-facebook"></i></i></a></li>
-        <li><a href="https://instagram.com/fuzzy_n_tricky"><i><i class="fa-brands fa-instagram"></i></i></a></li>
-        <li><a href="https://telegram.me/FuzzynTricky"><i><i class="fa-brands fa-telegram"></i></i></a></li>
-        <li><a href="https://www.youtube.com/c/FuzzynTricky"><i><i class="fa-brands fa-youtube"></i></i></a></li>
+        <li><a href="https://m.facebook.com/Fuzzyntricky-104255691713465/"   target="_blank"><i><i class="fa-brands fa-facebook"></i></i></a></li>
+        <li><a href="https://instagram.com/fuzzy_n_tricky"  target="_blank"   ><i><i class="fa-brands fa-instagram"></i></i></a></li>
+        <li><a href="https://telegram.me/FuzzynTricky"   target="_blank"  ><i><i class="fa-brands fa-telegram"></i></i></a></li>
+        <li><a href="https://www.youtube.com/c/FuzzynTricky"  target="_blank"  ><i><i class="fa-brands fa-youtube"></i></i></a></li>
     </ul>
     </section>
     <style>
