--- a/video.HTML
+++ b/video.HTML
@@ -37,7 +37,8 @@ body{
     .responsive-youtube
 {overflow:hidden; padding-bottom:56.25%; position:relative; height:0;}
 .responsive-youtube iframe
-{left:0; top:0; height:50%; width:50%; position:absolute;  margin-left: 25%; }
+{right:10px;left:17px; top:0; height:90%; width:90%; position:absolute;  margin-left: %; }
+
 
 .dude{
     border: 50px;
